ReferralSystem/force-app/main/default/objects/Referral__c/fields/Contact_Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address_Line1__c</fullName>
    <label>Contact Address Line1</label>
    <type>TextArea</type>
</CustomField>