ReferralSystem/force-app/main/default/objects/Referral__c/fields/Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_City__c</fullName>
    <label>Contact City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>