ReferralSystem/force-app/main/default/objects/Referral__c/fields/Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Country__c</fullName>
    <label>Contact Country</label>
    <length>200</length>
    <type>Text</type>
</CustomField>