ReferralSystem/force-app/main/default/objects/Referral__c/fields/Contact_Region__c.field-meta.xml
<CustomField>
    <fullName>Contact_Region__c</fullName>
    <label>Contact Region</label>
    <length>200</length>
    <type>Text</type>
</CustomField>