ReferralSystem/force-app/main/default/objects/Referral__c/fields/Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>Contact_Zip__c</fullName>
    <label>Contact Zip</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>