ReferralSystem/force-app/main/default/objects/Referral__c/fields/Products_Services_Sold__c.field-meta.xml
<CustomField>
    <fullName>Products_Services_Sold__c</fullName>
    <label>Products/Services Sold</label>
    <length>200</length>
    <type>Text</type>
</CustomField>