ReferralSystem/force-app/main/default/objects/Referral__c/fields/Referral_Id__c.field-meta.xml
<CustomField>
    <fullName>Referral_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Referral Id</label>
    <referenceTo>Referral_Staging__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Refferals</relationshipName>
    <type>Lookup</type>
</CustomField>