ReferralSystem/force-app/main/default/objects/Referral__c/fields/Referral_No__c.field-meta.xml
<CustomField>
    <fullName>Referral_No__c</fullName>
    <label>Referred By (ID)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>