ReferralSystem/force-app/main/default/objects/Referral__c/fields/Referral_Score__c.field-meta.xml
<CustomField>
    <fullName>Referral_Score__c</fullName>
    <formula>(IF(   NOT(ISBLANK(Revenue_Generated__c)) , 25, 0)) +
(IF(   NOT(ISBLANK(Products_Services_Sold__c))  , 25, 0)) +
(IF(   NOT(ISBLANK(Zip__c ) ) , 5, 0)) +
(IF(   NOT(ISBLANK(Customer_Email__c)) ,5,0))+
(IF(   NOT(ISBLANK(Customer_Phone__c) ),5,0))+
(IF(   NOT(ISBLANK(City__c )),5,0))+
(IF(   NOT(ISBLANK(Referral_Source__c) ) ,10,0))+
(IF(   NOT(ISBLANK(Contact_Name__c )) ,5,0))+
(IF(   NOT(ISBLANK(Region__c )) ,5,0))</formula>
    <label>Referral Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>