ReferralSystem/force-app/main/default/objects/Referral__c/fields/Referred_By_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Phone_No__c</fullName>
    <label>Referred By (Phone No)</label>
    <type>Phone</type>
</CustomField>