ReferralSystem/force-app/main/default/objects/Referral__c/fields/Requirement_Id__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Id__c</fullName>
    <label>Requirement Id</label>
    <referenceTo>Requirements__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>