ReferralSystem/force-app/main/default/objects/Referral__c/fields/Score_Final__c.field-meta.xml
<CustomField>
    <fullName>Score_Final__c</fullName>
    <label>Score Final</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>