ReferralSystem/force-app/main/default/objects/Referral__c/fields/SSN_ECN__c.field-meta.xml
<CustomField>
    <fullName>SSN_ECN__c</fullName>
    <label>SSN / ECN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>