ReferralSystem/force-app/main/default/objects/Referral__c/fields/Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Success_Rate__c</fullName>
    <label>Success Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>