ReferralSystem/force-app/main/default/objects/Referral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Referral_Id__c</columns>
    <columns>Referred_By__c</columns>
    <columns>Requirement_Id__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>